--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -58,4 +58,21 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/buttonPolice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/buttonProtection" />
+
+    <TextView android:text="百度地图"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:id="@+id/textView" />
+
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/baiDuMv"
+        android:layout_width="393dp"
+        android:layout_height="534dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="32dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
